# CotalityQ1Capstone

./: .gitignore  Makefile  README.md  ca_baseline.ipynb  ca_dataprep.ipynb  ca_eda.ipynb  ca_results.ipynb  ca_xgboost.ipynb  combine_dataset.py  data_extraction.md  download_census_data.py  download_nlcd_annual.py  download_prism_data.py  download_sd_county.py  environment.yml  extract_BSmosaics.py  final_xgb_1.ubj  model.ipynb  process_dem_data.py  process_mtbs_data.py  process_ndvi_data.py  pyproject.toml  requirements.txt  xgboost.ipynb
.github/workflows/: deploy.yml
ca_data_processing/: combine_dataset.py  download_ca_state.py  download_nlcd_annual.py  download_prism_data.py  process_dem_data.py  process_mbts_data.py
data/sd_county/: sd_county.dbf  sd_county.shp  sd_county.shx
data_processing/quarter_1/: combine_dataset.py  process_mtbs_data.py  process_ndvi_data.py
data_processing/quarter_2/: combine_dataset.py  download_prism_data.py  process_mbts_data.py  process_ndvi_data.py
eda/quarter_2/: ca_dataprep.ipynb  ca_eda.ipynb
modeling/quarter_2/: ca_baseline.ipynb  ca_xgboost.ipynb
quarter_1/sd_data_processing/: combine_dataset.py  download_nlcd_annual.py  download_prism_data.py  download_sd_county.py  process_dem_data.py
results/: aggregated_metrics.md
sd_data_processing/: combine_dataset.py  download_prism_data.py  process_dem_data.py
tests/: test_ca_data_processing.py  test_sd_data_processing.py
website/: index.html  script.js  style.css
website/css/: base.css  demo.css  footer.css  hero.css  layout.css  nav.css  style.css  team.css  (+2 more)
(+23 files in other folders)
