[project]
name = "cotalityq1capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "rasterio>=1.4.3",
    "rioxarray>=0.20.0",
    "tqdm>=4.67.1",
    "xarray>=2025.11.0",
]
