[project]
name = "cotalityq1capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "netcdf4>=1.7.3",
    "plotly>=6.5.0",
    "polars>=1.37.1",
    "pyarrow>=22.0.0",
    "rasterio>=1.4.3",
    "rioxarray>=0.20.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xarray>=2025.11.0",
    "xgboost>=3.1.3",
]
